# uv_docker

./: .gitignore  README.md  compose.yaml  pyproject.toml  setup.sh
.devcontainer/mac/: devcontainer.json
data/input/: sample_submission.csv  test_demo.csv  train_demo.csv
docker/: Dockerfile.gpu  Dockerfile.mac
exp/001/: run.ipynb
exp/001/config/: config.yaml
exp/001/config/model/: lgb.yaml
exp/001/src/: config.py
notebook/: demo.ipynb
src/: demo.ipynb
